<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:singleLine="true"
            android:text="@string/dialog_create_activity_weight" />

        <com.chaos.staerke.ui.VerticalSeekBar
            android:id="@+id/weight"
            android:layout_width="300dip"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:singleLine="true"
            android:text="@string/dialog_create_activity_repetitions" />

        <com.chaos.staerke.ui.VerticalSeekBar
            android:id="@+id/repetitions"
            android:layout_width="300dip"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:singleLine="true"
            android:text="@string/dialog_create_activity_sets" />

        <com.chaos.staerke.ui.VerticalSeekBar
            android:id="@+id/sets"
            android:layout_width="300dip"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
